[update] 图片更换为免费外链，增加svg测试

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
     </div>
   </div> -->
   <div class="img-page">
-    <img src="imgs/img-header.jpg" alt="封面" width="100%" height="auto">
+    <img src="https://s3.bmp.ovh/imgs/2022/08/23/bc762166ef944134.jpg" alt="封面" width="100%" height="auto">
   </div>
   <main class="page-start">
-    <section class="page">
+    <section class="page page-start">
       <h2>一、房屋基础信息</h2>
       <table style="width: 100%;">
         <tbody>
@@ -281,12 +281,14 @@
         </table>
       </div>
       <div>
-        <img src="imgs/std-report.jpg" alt="指数报告" width="100%" height="auto">
+        <img src="https://s3.bmp.ovh/imgs/2022/08/23/5c07438c3721aa0b.jpg" alt="指数报告" width="100%" height="auto">
       </div>
     </section>
     <section class="page-start">
       <h2>canvas测试</h2>
       <canvas id="canvasTest"></canvas>
+      <h2>svg测试</h2>
+      <?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M19 29V42H29V29H19Z" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/><path d="M9 42H39" stroke="#333" stroke-width="4" stroke-linecap="round"/></svg>
     </section>
     <section class="page page-start">
       <h2>三、房屋查验内容</h2>
@@ -309,7 +311,7 @@
             </td>
             <td class="img-cell">
               <div style="display: flex;">
-                <img src="imgs/issue-1.jpeg" alt="" width="200" height="auto">
+                <img src="https://s3.bmp.ovh/imgs/2022/08/23/fd2092dd5236bcb5.jpeg" alt="" width="200" height="auto">
               </div>
             </td>
           </tr>
@@ -322,8 +324,8 @@
             </td>
             <td class="img-cell">
               <div style="display: flex;">
-                <img src="imgs/issue-1.jpeg" alt="" width="200" height="auto">
-                <img src="imgs/issue-1.jpeg" alt="" width="200" height="auto">
+                <img src="https://s3.bmp.ovh/imgs/2022/08/23/fd2092dd5236bcb5.jpeg" alt="" width="200" height="auto">
+                <img src="https://s3.bmp.ovh/imgs/2022/08/23/fd2092dd5236bcb5.jpeg" alt="" width="200" height="auto">
               </div>
             </td>
           </tr>
@@ -354,7 +356,7 @@
             </td>
             <td class="img-cell">
               <div style="display: flex;">
-                <img src="imgs/issue-1.jpeg" alt="" width="200" height="auto">
+                <img src="https://s3.bmp.ovh/imgs/2022/08/23/fd2092dd5236bcb5.jpeg" alt="" width="200" height="auto">
               </div>
             </td>
           </tr>
@@ -383,7 +385,7 @@
             </td>
             <td class="img-cell">
               <div style="display: flex;">
-                <img src="imgs/issue-1.jpeg" alt="" width="200" height="auto">
+                <img src="https://s3.bmp.ovh/imgs/2022/08/23/fd2092dd5236bcb5.jpeg" alt="" width="200" height="auto">
               </div>
             </td>
           </tr>
@@ -396,8 +398,8 @@
             </td>
             <td class="img-cell">
               <div style="display: flex;">
-                <img src="imgs/issue-1.jpeg" alt="" width="200" height="auto">
-                <img src="imgs/issue-1.jpeg" alt="" width="200" height="auto">
+                <img src="https://s3.bmp.ovh/imgs/2022/08/23/fd2092dd5236bcb5.jpeg" alt="" width="200" height="auto">
+                <img src="https://s3.bmp.ovh/imgs/2022/08/23/fd2092dd5236bcb5.jpeg" alt="" width="200" height="auto">
               </div>
             </td>
           </tr>
@@ -420,7 +422,7 @@
     </section>
   </main>
   <div class="img-page">
-    <img src="imgs/img-footer.jpg" alt="封底" width="100%" height="auto">
+    <img src="https://s3.bmp.ovh/imgs/2022/08/23/4c93af5d19d3f327.jpg" alt="封底" width="100%" height="auto">
   </div>
   <!-- <footer class="page page-start" style="width: 80%; margin: 0 auto;">
     <h3 class="tac">查验声明</h3>
