--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
       <canvas id="canvasTest"></canvas>
       <h2>svg测试</h2>
       <?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M19 29V42H29V29H19Z" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/><path d="M9 42H39" stroke="#333" stroke-width="4" stroke-linecap="round"/></svg>
+      <h2>js插入文本，测试javascript是否执行</h2>
+      <div id="textElm"></div>
     </section>
     <section class="page page-start">
       <h2>三、房屋查验内容</h2>
@@ -537,6 +539,9 @@
 
     ctx.fillStyle = 'green';
     ctx.fillRect(10, 10, 150, 100);
+
+    const textElm = document.getElementById('textElm')
+    textElm.innerHTML = '<p>这是一串html字符串</p>'
   </script>
 </body>
 </html>
