--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
       <h2>二、查验数据分析</h2>
       <h3>查验数据统计</h3>
       <h4 style="text-align: center;">查验问题空间分布</h4>
-      <div id="chart-column-space"><!-- 柱状图 --></div>
+      <div id="chart-column-space" style="height: 400px;"><!-- 柱状图 --></div>
       <div class="statistics-tip" style="max-height: 100px; overflow-y: hidden;">
         本次查验共发现质量问题10条，问题最多的前三个空间部位是：公卫 4条，主卫 3条，厨房 3条。
       </div>
 
       <h4 style="text-align: center; margin-top: 20px;">查验问题分类统计</h4>
-      <div id="chart-column-type"><!-- 柱状图 --></div>
+      <div id="chart-column-type" style="height: 400px;"><!-- 柱状图 --></div>
       <div class="statistics-tip">
         <p style="max-height: 100px; overflow-y: hidden;">本次查验工作涉及5大类的5项检查项目，问题最多的前三个类别是：电气工程 3条；卫浴工程 2条；顶棚工程 2条。</p>
         <p>各检查项详细数据如下：</p>
@@ -292,6 +292,8 @@
       <?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M19 29V42H29V29H19Z" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/><path d="M9 42H39" stroke="#333" stroke-width="4" stroke-linecap="round"/></svg>
       <h2>js插入文本，测试javascript是否执行</h2>
       <div id="textElm"></div>
+      <h2>G2Plot</h2>
+      <div id="testG2Plot"></div>
     </section>
     <section class="page page-start">
       <h2>三、房屋查验内容</h2>
@@ -457,9 +459,11 @@
     ctx.fillRect(10, 10, 150, 100);
 
     const textElm = document.getElementById('textElm')
-    textElm.innerHTML = `<p>这是一串html字符串</p>
-      <p>G2Plot.Column: ${G2Plot.Column}</p>
-      <p>window.G2Plot.Column: ${window.G2Plot.Column}</p>`
+    textElm.innerHTML = `<p>这是一串html字符串</p>`
+    
+    const testG2Plot = document.getElementById('testG2Plot')
+    testG2Plot.innerHTML = 'G2Plot.Column: ' + G2Plot.Column + '<br>' +
+      'window.G2Plot.Column: ' + window.G2Plot.Column
     
     const Column = window.G2Plot.Column
     const dataSpace = [
@@ -500,6 +504,7 @@
     ]
     const columnSpace = new Column('chart-column-space', {
       data: dataSpace,
+      height: 400,
       appendPadding: [20, 8, 30, 8],
       xField: 'area',
       yField: 'value',
@@ -523,6 +528,7 @@
     columnSpace.render()
     const columnType = new Column('chart-column-type', {
       data: dataType,
+      height: 400,
       appendPadding: [20, 8, 40, 8],
       xField: 'type',
       yField: 'value',
