[update] test echarts

--- a/index.html
+++ b/index.html
@@ -6,32 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>房屋查验报告</title>
   <script type="text/javascript" src="https://unpkg.com/@antv/g2plot@latest/dist/g2plot.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5.3.3/dist/echarts.js"></script>
   <style>
     /* 打印样式 */
     @media print {
-      /* html {
-        background: #efefef;
+      @page {
+        size: A4 portrait;
+        margin: 20mm 15mm;
+
+        /* 以下设置常见浏览器不支持 */
+        /* @bottom-left, @bottom-center, @bottom-right {
+          border-top: 1px solid gray;
+        }
+        @bottom-center {
+          content: "第" counter(page) "页";
+        } */
       }
-      body {
-        background: #fff;
-      } */
       html, body {
-        /* width: 210mm; */
         height: 297mm;
         box-sizing: border-box;
       }
-    }
-    @page {
-      size: A4 portrait;
-      margin: 20mm 15mm;
-
-      /* 以下设置常见浏览器不支持 */
-      /* @bottom-left, @bottom-center, @bottom-right {
-        border-top: 1px solid gray;
+      h1, h2, h3, h4, h5, h6,
+      thead, tfoot, tr, th, td,
+      li {
+        page-break-inside: avoid;
       }
-      @bottom-center {
-        content: "第" counter(page) "页";
-      } */
+      body {
+        background-color: white;
+        color: black;
+      }
+      a::after {
+        content: "(" attr(href) ")";
+      }
+      thead, tfoot {
+        display: table-row-group;
+      }
     }
 
     /* 样式重置 */
@@ -101,9 +110,6 @@
     }
     .table-head {
       background-color: #9bc0eb;
-    }
-    thead, tfoot, tr, th, td {
-      page-break-inside: avoid;
     }
 
     .statistics-tip {
@@ -292,6 +298,8 @@
       <?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M19 29V42H29V29H19Z" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/><path d="M9 42H39" stroke="#333" stroke-width="4" stroke-linecap="round"/></svg>
       <h2>js插入文本，测试javascript是否执行</h2>
       <div id="textElm"></div>
+      <h2>echarts</h2>
+      <div id="testEcharts" style="width: 600px; height:400px;"></div>
       <h2>G2Plot</h2>
       <div id="testG2Plot"></div>
     </section>
@@ -459,8 +467,34 @@
     ctx.fillRect(10, 10, 150, 100);
 
     const textElm = document.getElementById('textElm')
-    textElm.innerHTML = `<p>这是一串html字符串</p>`
-    
+    textElm.innerHTML = '<p>这是一串html字符串</p>'
+
+    // 基于准备好的dom，初始化echarts实例
+    var myChart = echarts.init(document.getElementById('testEcharts'));
+    // 指定图表的配置项和数据
+    var option = {
+      title: {
+        text: 'ECharts 入门示例'
+      },
+      tooltip: {},
+      legend: {
+        data: ['销量']
+      },
+      xAxis: {
+        data: ['衬衫', '羊毛衫', '雪纺衫', '裤子', '高跟鞋', '袜子']
+      },
+      yAxis: {},
+      series: [
+        {
+          name: '销量',
+          type: 'bar',
+          data: [5, 20, 36, 10, 10, 20]
+        }
+      ]
+    };
+    // 使用刚指定的配置项和数据显示图表。
+    myChart.setOption(option);
+        
     const testG2Plot = document.getElementById('testG2Plot')
     testG2Plot.innerHTML = 'G2Plot.Column: ' + G2Plot.Column + '<br>' +
       'window.G2Plot.Column: ' + window.G2Plot.Column
