[update] 添加背景图实现封面

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
       width: 210mm;
       height: 297mm;
       /* margin: auto -15mm; */
+      background-color: #efefef;
+    }
+    .img-page.header-bg {
+      background-color: #efefef;
+      height: 297mm;
+      background-image: url(header.jpg);
+      background-repeat: no-repeat;
+      background-size: 105% 104%;
+      background-position: center;
     }
 
     .tac {
@@ -133,6 +142,7 @@
   </style>
 </head>
 <body>
+  <div class="img-page header-bg"></div>
   <div class="img-page">
     <img src="header.jpg" alt="封面" class="img-a4">
   </div>
@@ -285,7 +295,7 @@
         </table>
       </div>
       <div>
-        <img src="report-std.jpg" alt="指数报告" width="100%" height="auto">
+        <img src="std-report.jpg" alt="指数报告" width="100%" height="auto">
       </div>
     </section>
     <section class="page page-start">
