--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         /* margin: 20mm 15mm; */
 
         /* 以下设置常见浏览器不支持 */
-        /* @bottom-left, @bottom-center, @bottom-right {
+        @bottom-left, @bottom-center, @bottom-right {
           border-top: 1px solid gray;
         }
         @bottom-center {
           content: "第" counter(page) "页";
-        } */
+        }
       }
       
       html, body {
@@ -46,6 +46,13 @@
     @page {
       size: A4 portrait;
       /* margin: 20mm 15mm; */
+
+      @bottom-left, @bottom-center, @bottom-right {
+        border-top: 1px solid gray;
+      }
+      @bottom-center {
+        content: "第" counter(page) "页";
+      }
     }
     
 
@@ -83,20 +90,17 @@
       /* height: 257mm; */
       overflow: visible;
       text-align: center;
-    }
-    .img-page .img-a4 {
-      width: 210mm;
-      height: 297mm;
-      /* margin: auto -15mm; */
+      height: 370mm;
       background-color: #efefef;
+      background-repeat: no-repeat;
+      background-size: 125% 100%;
+      background-position: center;
     }
     .img-page.header-bg {
-      background-color: #efefef;
-      height: 297mm;
       background-image: url(header.jpg);
-      background-repeat: no-repeat;
-      background-size: 105% 104%;
-      background-position: center;
+    }
+    .img-page.footer-bg {
+      background-image: url(footer.jpg);
     }
 
     .tac {
@@ -142,10 +146,7 @@
   </style>
 </head>
 <body>
-  <div class="img-page header-bg"></div>
-  <div class="img-page">
-    <img src="header.jpg" alt="封面" class="img-a4">
-  </div>
+  <div class="img-page" style="background-image: url(header.jpg)"><!-- 封面，若有多页循环此容器 --></div>
   <main class="page-start">
     <section class="page page-start">
       <h2>一、房屋基础信息</h2>
@@ -429,9 +430,7 @@
       </table>
     </section>
   </main>
-  <div class="img-page">
-    <img src="footer.jpg" alt="封底" class="img-a4">
-  </div>
+  <div class="img-page" style="background-image: url(footer.jpg);"><!-- 封底，若有多页循环此容器 --></div>
 
   <script type="text/javascript">
     // 空间分布统计图
