[update] 调整封面封底

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     /* 封面、封底 */
     .img-page {
       page-break-inside: avoid;
-      /* page-break-before: always; */
+      page-break-before: always;
       /* height: 257mm; */
       overflow: visible;
       text-align: center;
-      height: 370mm;
+      height: 360mm;
       background-color: #efefef;
       background-repeat: no-repeat;
       background-size: 125% 100%;
